--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
 [build]
   functions = "netlify/functions"
   publish = "public"
+
+[[edge_functions]]
+  path = "/.netlify/functions/edge-proxy"
+  function = "edge-proxy"
